--- a/09/zhouzichen/templates/login.html
+++ b/09/zhouzichen/templates/login.html
@@ -42,10 +42,10 @@
                         <h3 class="panel-title">欢迎登陆后台管理平台</h3>
                     </div>
                     <div class="panel-body">
-                        <form role="form">
+                        <form role="form" action="login" method="post">
                             <fieldset>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
+                                <div class="form-group"  >
+                                    <input class="form-control" placeholder="Username" name="username" type="username" autofocus>
                                 </div>
                                 <div class="form-group">
                                     <input class="form-control" placeholder="Password" name="password" type="password" value="">
@@ -55,8 +55,7 @@
                                         <input name="remember" type="checkbox" value="Remember Me">Remember Me
                                     </label>
                                 </div>
-                                <!-- Change this to a button or input when using this as a form -->
-                                <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
+                                <input type="submit" class="btn btn-lg btn-success btn-block" value="Login">
                             </fieldset>
                         </form>
                     </div>
