mod 09 project for zhouzichen

--- a/09/zhouzichen/templates/login.html
+++ b/09/zhouzichen/templates/login.html
@@ -42,7 +42,7 @@
                         <h3 class="panel-title">欢迎登陆后台管理平台</h3>
                     </div>
                     <div class="panel-body">
-                        <form role="form" action="login" method="post">
+                        <form id ='loginform' role="form" action="login" method="post">
                             <fieldset>
                                 <div class="form-group"  >
                                     <input class="form-control" placeholder="Username" name="username" type="username" autofocus>
@@ -55,7 +55,7 @@
                                         <input name="remember" type="checkbox" value="Remember Me">Remember Me
                                     </label>
                                 </div>
-                                <input type="submit" class="btn btn-lg btn-success btn-block" value="Login">
+                                <button id='loginbutton'  class="btn btn-lg btn-success btn-block" >Login</button>
                             </fieldset>
                         </form>
                     </div>
